# llm-pretrainer

./: README.md  dataloader.py  model.py  pyproject.toml  setup.sh  train.py  utils.py
scripts/: check_graph_breaks.sh
