[project]
name = "llm-pretrainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "flash-attn>=2.8.3",
    "lovely-tensors>=0.1.20",
    "numpy>=2.4.0",
    "psutil>=7.2.1",
    "torch==2.5.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]
